# generic-extractor

./: .env.example  .gitignore  .mcp.json  Cargo.toml  Makefile  README.md
.agents/: README.md
configs/: financial_br.json  legal_br.json
docling-sidecar/: pyproject.toml  server.py
docs/: deployment.md  extraction-guide.md  sheet-extractor-design.md
infra/gce/: create-instance.sh  docling-gpu.service  idle-shutdown.sh  pyproject-gpu.toml  setup-firewall.sh  setup-instance.sh  setup-service-account.sh
mcp-server/: AGENT_PROMPT.md  package-lock.json  package.json
mcp-server/src/: index.ts
migrations/: 003_datasets.sql  004_projects.sql  005_configs.sql
plan/initial-schema/: design_notes.md  extraction_schema.json  extraction_schema_draft.yaml
scripts/: dev.sh
smol-docling-sidecar/: pyproject.toml  server.py
src/: config.rs  content_store.rs  entities.rs  extractor.rs  gce.rs  main.rs  openrouter.rs  schema.rs  sheet_extractor.rs  sheet_parser.rs  sheet_schema.rs  supabase.rs
src/ocr/: docling.rs  mistral.rs  mod.rs  smol_docling.rs
web/: .env.local.example  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: layout.tsx
web/src/app/(app)/: layout.tsx  page.tsx
web/src/app/(app)/datasets/[id]/: page.tsx
web/src/app/(app)/extractions/[id]/: page.tsx
web/src/app/(app)/projects/[id]/: page.tsx
web/src/app/(app)/projects/[id]/chat/: page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/extractor/[...path]/: route.ts
web/src/app/api/projects/: route.ts
web/src/app/api/projects/[id]/: route.ts
web/src/app/api/projects/[id]/messages/: route.ts
web/src/app/api/upload/: route.ts
web/src/app/auth/login/: page.tsx
web/src/app/auth/signup/: page.tsx
web/src/components/chat/: chat-panel.tsx  message-bubble.tsx  tool-indicator.tsx
web/src/components/dataset/: data-table.tsx
web/src/components/extraction/: node-detail.tsx  tree-view.tsx
web/src/components/ui/: markdown.tsx  new-project-dialog.tsx  project-actions.tsx  sidebar.tsx
web/src/hooks/: use-chat.ts  use-dataset.ts  use-extraction.ts
web/src/lib/: types.ts
web/src/lib/supabase/: client.ts  middleware.ts  server.ts
web/src/lib/tools/: definitions.ts  executor.ts  system-prompt.ts
