[package]
name = "generic-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF processing - use earlier version
lopdf = "0.31"

# Image processing & base64
image = "0.24"
base64 = "0.21"

# Regex for entity extraction
regex = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
