[project]
name = "docling-sidecar"
version = "0.1.0"
description = "Docling PDF processing sidecar for generic-extractor"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.70.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
