[project]
name = "docling-sidecar"
version = "0.1.0"
description = "Docling PDF processing sidecar for generic-extractor"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.70.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.uv]
override-dependencies = [
    "nvidia-cublas-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-cupti-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform == 'never'",
    "nvidia-cuda-runtime-cu12 ; sys_platform == 'never'",
    "nvidia-cudnn-cu12 ; sys_platform == 'never'",
    "nvidia-cufft-cu12 ; sys_platform == 'never'",
    "nvidia-curand-cu12 ; sys_platform == 'never'",
    "nvidia-cusolver-cu12 ; sys_platform == 'never'",
    "nvidia-cusparse-cu12 ; sys_platform == 'never'",
    "nvidia-cusparselt-cu12 ; sys_platform == 'never'",
    "nvidia-nccl-cu12 ; sys_platform == 'never'",
    "nvidia-nvjitlink-cu12 ; sys_platform == 'never'",
    "nvidia-nvtx-cu12 ; sys_platform == 'never'",
    "nvidia-nvshmem-cu12 ; sys_platform == 'never'",
    "nvidia-cufile-cu12 ; sys_platform == 'never'",
    "cuda-bindings ; sys_platform == 'never'",
    "triton ; sys_platform == 'never'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
